// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateChannelModal renders closed component 1`] = `
<Memo(WithStyles(Modal))
  fullPage={true}
  handleClose={[MockFunction]}
  open={false}
  title=""
>
  <WithStyles(ForwardRef(Grid))
    className="root-mock"
  >
    <Connect(Component) />
  </WithStyles(ForwardRef(Grid))>
</Memo(WithStyles(Modal))>
`;

exports[`CreateChannelModal renders component 1`] = `
<Memo(WithStyles(Modal))
  fullPage={true}
  handleClose={[MockFunction]}
  open={true}
  title=""
>
  <WithStyles(ForwardRef(Grid))
    className="root-mock"
  >
    <Connect(Component) />
  </WithStyles(ForwardRef(Grid))>
</Memo(WithStyles(Modal))>
`;
